fix: text cut issue on iOS and update scrollbar color

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,9 +75,6 @@ html:not(.dark) {
 
 html[data-theme-transition] [data-disable-transition-on-theme] {
   view-transition-name: none !important;
-  /* Fix text cut issue on iOS */
-  transform: translateZ(0);
-  -webkit-transform: translateZ(0);
 }
 
 @supports not (view-transition-name: none) {
@@ -91,14 +88,14 @@ html[data-theme-transition] [data-disable-transition-on-theme] {
   font-family: "Snell-Bold";
   src: url("/font/Snell-Bold.woff2") format("woff2");
   font-display: swap;
-  unicode-range: U+0030-0039, U+0041-005A, U+0061-007A, U+00E1, U+00E9, U+00ED, U+00F3, U+00FA, U+00FC, U+00F1, U+002C-002E, U+003F, U+0021, U+003A, U+003B, U+0022, U+0027, U+0028-0029, U+005B-005D, U+003C-003E, U+002D, U+005F, U+002F, U+00B7, U+00A9, U+0401, U+0410-044F, U+0451;
+  unicode-range: U+0030-0039,U+0041-005A,U+0061-007A,U+00C1,U+00C9,U+00CD,U+00D3,U+00DA,U+00DC,U+00D1,U+00E1,U+00E9,U+00ED,U+00F3,U+00FA,U+00FC,U+00F1,U+0410-044F,U+0401,U+0451,U+0021-002F,U+003A-0040,U+00A9;
 }
 
 @font-face {
   font-family: "Snell-Black";
   src: url("/font/Snell-Black.woff2") format("woff2");
   font-display: swap;
-  unicode-range: U+0030-0039, U+0041-005A, U+0061-007A, U+00E1, U+00E9, U+00ED, U+00F3, U+00FA, U+00FC, U+00F1, U+002C-002E, U+003F, U+0021, U+003A, U+003B, U+0022, U+0027, U+0028-0029, U+005B-005D, U+003C-003E, U+002D, U+005F, U+002F, U+00B7, U+00A9, U+0401, U+0410-044F, U+0451;
+  unicode-range: U+0030-0039,U+0041-005A,U+0061-007A,U+00C1,U+00C9,U+00CD,U+00D3,U+00DA,U+00DC,U+00D1,U+00E1,U+00E9,U+00ED,U+00F3,U+00FA,U+00FC,U+00F1,U+0410-044F,U+0401,U+0451,U+0021-002F,U+003A-0040,U+00A9;
 }
 
 /* STIX Two Text Variable Font */
@@ -107,7 +104,7 @@ html[data-theme-transition] [data-disable-transition-on-theme] {
   src: url("/font/STIX.woff2") format("woff2-variations");
   font-display: swap;
   font-weight: 400 700;
-  unicode-range: U+0030-0039, U+0041-005A, U+0061-007A, U+00E1, U+00E9, U+00ED, U+00F3, U+00FA, U+00FC, U+00F1, U+002C-002E, U+003F, U+0021, U+003A, U+003B, U+0022, U+0027, U+0028-0029, U+005B-005D, U+003C-003E, U+002D, U+005F, U+002F, U+00B7, U+00A9, U+0401, U+0410-044F, U+0451;
+  unicode-range: U+0030-0039,U+0041-005A,U+0061-007A,U+00C1,U+00C9,U+00CD,U+00D3,U+00DA,U+00DC,U+00D1,U+00E1,U+00E9,U+00ED,U+00F3,U+00FA,U+00FC,U+00F1,U+0410-044F,U+0401,U+0451,U+0021-002F,U+003A-0040,U+00A9;
 }
 
 @font-face {
@@ -115,7 +112,7 @@ html[data-theme-transition] [data-disable-transition-on-theme] {
   src: url("/font/STIX-italic.woff2") format("woff2-variations");
   font-display: swap;
   font-weight: 400 700;
-  unicode-range: U+0030-0039, U+0041-005A, U+0061-007A, U+00E1, U+00E9, U+00ED, U+00F3, U+00FA, U+00FC, U+00F1, U+002C-002E, U+003F, U+0021, U+003A, U+003B, U+0022, U+0027, U+0028-0029, U+005B-005D, U+003C-003E, U+002D, U+005F, U+002F, U+00B7, U+00A9, U+0401, U+0410-044F, U+0451;
+  unicode-range: U+0030-0039,U+0041-005A,U+0061-007A,U+00C1,U+00C9,U+00CD,U+00D3,U+00DA,U+00DC,U+00D1,U+00E1,U+00E9,U+00ED,U+00F3,U+00FA,U+00FC,U+00F1,U+0410-044F,U+0401,U+0451,U+0021-002F,U+003A-0040,U+00A9;
 }
 
 /* Minimal Subset of EarlySummerSerif Variable Font for UI */
@@ -124,5 +121,5 @@ html[data-theme-transition] [data-disable-transition-on-theme] {
   src: url("/font/EarlySummer-subset.woff2") format("woff2-variations");
   font-display: swap;
   font-weight: 400 700;
-  unicode-range: U+91cd, U+65b0, U+7f16, U+6392, U+518d, U+73b0, U+7248, U+5f0f, U+4e4b, U+7f8e, U+6587, U+7ae0, U+6807, U+7b7e, U+5173, U+4e8e, U+6a19, U+7c64, U+95dc, U+65bc, U+8a18, U+4e8b, U+30bf, U+30b0, U+6982, U+8981;
+  unicode-range: U+91cd,U+65b0,U+7f16,U+6392,U+518d,U+73b0,U+7248,U+5f0f,U+4e4b,U+7f8e,U+6587,U+7ae0,U+6807,U+7b7e,U+5173,U+4e8e,U+6a19,U+7c64,U+95dc,U+65bc,U+8a18,U+4e8b,U+30bf,U+30b0,U+6982,U+8981;
 }
